--- a/A03_SOMA_CODINGTEST/B_01_05/C04_D-27_260208.ipynb
+++ b/A03_SOMA_CODINGTEST/B_01_05/C04_D-27_260208.ipynb
@@ -214,50 +214,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "id": "d4d305b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. 알고(시뮬): 백준 16234 (인구 이동) - https://www.acmicpc.net/problem/16234\n",
     "import sys\n",
+    "from collections import deque\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''4 10 50\n",
+    "10 100 20 90\n",
+    "80 100 60 70\n",
+    "70 20 30 40\n",
+    "50 20 100 10''')\n",
     "\n",
     "input = sys.stdin.readline\n",
+    "\n",
+    "directions = [(+1, 0), (-1, 0), (0, -1), (0, +1)]\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    N, L, R = map(int, input().split())\n",
+    "    populations = [list(map(int, input().split())) for _ in range(N)]\n",
+    "\n",
+    "    # 지정한 r, c 기준 연합과 연합 총 인구 반환\n",
+    "    def find_union(r, c):\n",
+    "        union = set([(r, c)])\n",
+    "        dq = deque([(r, c)])\n",
+    "        total_p = populations[r][c]\n",
+    "\n",
+    "        while dq:\n",
+    "            cur_r, cur_c = dq.popleft()\n",
+    "            for dr, dc in directions:\n",
+    "                nr, nc = cur_r + dr, cur_c + dc\n",
+    "                if 0 <= nr < N and 0 <= nc < N and (nr, nc) not in union:\n",
+    "                    cur_p = populations[cur_r][cur_c]\n",
+    "                    nxt_p = populations[nr][nc]\n",
+    "                    diff = abs(cur_p - nxt_p)\n",
+    "\n",
+    "                    if L <= diff <= R:\n",
+    "                        union.add((nr, nc))\n",
+    "                        dq.append((nr, nc))\n",
+    "                        total_p += nxt_p\n",
+    "\n",
+    "        return union, total_p\n",
+    "\n",
+    "    # 연합을 찾고, 사람들들 이동 시킴\n",
+    "    def is_people_moved():\n",
+    "        visited_nations = set()\n",
+    "        unions = []\n",
+    "\n",
+    "        for r in range(N):\n",
+    "            for c in range(N):\n",
+    "                if (r, c) not in visited_nations:\n",
+    "                    union_set, total_p = find_union(r, c)\n",
+    "                    visited_nations.update(union_set)\n",
+    "\n",
+    "                    # 연합이 있으면 최소 2개\n",
+    "                    if len(union_set) > 1:\n",
+    "                        unions.append((union_set, total_p))\n",
+    "        if unions:\n",
+    "            for union, total_p in unions:\n",
+    "                avg_p = total_p // len(union)\n",
+    "                for r, c in union:\n",
+    "                    populations[r][c] = avg_p\n",
+    "\n",
+    "            return True\n",
+    "        return False\n",
+    "\n",
+    "    count = 0\n",
+    "    while True:\n",
+    "        if is_people_moved():\n",
+    "            count += 1\n",
+    "        else:\n",
+    "            break\n",
+    "\n",
+    "    print(count)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "id": "44b2c219",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. 알고(DP): 백준 1520 (내리막 길) - https://www.acmicpc.net/problem/1520\n",
     "import sys\n",
+    "from heapq import heappop, heappush\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''4 5\n",
+    "50 45 37 32 30\n",
+    "35 50 40 20 25\n",
+    "30 30 25 17 28\n",
+    "27 24 22 15 10''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    M, N = map(int, input().split())\n",
     "\n",
+    "    board = [list(map(int, input().split())) for _ in range(M)]\n",
+    "    visited = [[False] * N for _ in range(M)]\n",
+    "    dp = [[0] * N for _ in range(M)]\n",
     "\n",
-    "solve()\n"
+    "    directions = [(+1, 0), (-1, 0), (0, +1), (0, -1)]\n",
+    "\n",
+    "    pq = [(-board[0][0], 0, 0)]  # 높이, 좌표\n",
+    "    visited[0][0] = True\n",
+    "    dp[0][0] = 1\n",
+    "\n",
+    "    while pq:\n",
+    "        cur_h, r, c = heappop(pq)\n",
+    "\n",
+    "        for dr, dc in directions:\n",
+    "            nr, nc = r + dr, c + dc\n",
+    "            if 0 <= nr < M and 0 <= nc < N:\n",
+    "                nxt_height = board[nr][nc]\n",
+    "                if nxt_height < -cur_h:\n",
+    "                    if not visited[nr][nc]:\n",
+    "                        heappush(pq, (-nxt_height, nr, nc))\n",
+    "                        visited[nr][nc] = True\n",
+    "                    dp[nr][nc] += dp[r][c]\n",
+    "\n",
+    "    print(dp[M-1][N-1])\n",
+    "\n",
+    "solve()"
    ]
   },
   {
@@ -265,23 +372,82 @@
    "execution_count": null,
    "id": "7310d5de",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "3\n",
+      "1 4 5\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. 알고(그래프): 백준 11779 (최소비용 구하기 2) - https://www.acmicpc.net/problem/11779\n",
     "import sys\n",
+    "from heapq import heappop, heappush\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''5\n",
+    "8\n",
+    "1 2 2\n",
+    "1 3 3\n",
+    "1 4 1\n",
+    "1 5 10\n",
+    "2 4 2\n",
+    "3 4 1\n",
+    "3 5 1\n",
+    "4 5 3\n",
+    "1 5''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    n, m = int(input()), int(input())\n",
     "\n",
-    "    pass\n",
+    "    graph = [[] for _ in range(n + 1)]\n",
+    "    for _ in range(m):\n",
+    "        s, e, c = map(int, input().split())\n",
+    "        graph[s].append((e, c))\n",
+    "\n",
+    "    start, end = map(int, input().split())\n",
+    "\n",
+    "    min_parent = [0] * (n + 1)\n",
+    "    min_dist = [float('inf')] * (n + 1)\n",
+    "    min_dist[start] = 0\n",
+    "\n",
+    "    pq = [(0, start)]\n",
+    "\n",
+    "    while pq:\n",
+    "        cur_dist, cur = heappop(pq)\n",
+    "        if cur == end:\n",
+    "            break\n",
+    "\n",
+    "        if cur_dist > min_dist[cur]:\n",
+    "            continue\n",
+    "\n",
+    "        for nxt, cost in graph[cur]:\n",
+    "            nxt_dist = cur_dist + cost\n",
+    "            if nxt_dist < min_dist[nxt]:\n",
+    "                min_parent[nxt] = cur\n",
+    "                min_dist[nxt] = nxt_dist\n",
+    "                heappush(pq, (nxt_dist, nxt))\n",
+    "\n",
+    "    path = []\n",
+    "    curr = end\n",
+    "    while curr != 0:\n",
+    "        path.append(curr)\n",
+    "        curr = min_parent[curr]\n",
+    "\n",
+    "    path.reverse()\n",
+    "    print(min_dist[end])\n",
+    "    print(len(path))\n",
+    "    print(*path)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -289,23 +455,98 @@
    "execution_count": null,
    "id": "f78dd7c6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. 알고(백트래킹): 백준 1062 (가르침) - https://www.acmicpc.net/problem/1062\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''9 8\n",
+    "antabtica\n",
+    "antaxtica\n",
+    "antadtica\n",
+    "antaetica\n",
+    "antaftica\n",
+    "antagtica\n",
+    "antahtica\n",
+    "antajtica\n",
+    "antaktica''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    N, K = map(int, input().split())\n",
+    "    can_read_set = set('anta' + 'tica')\n",
+    "    can_learn = K - len(can_read_set)\n",
+    "\n",
+    "    if K < len(can_read_set):\n",
+    "        print(0)\n",
+    "        return\n",
+    "\n",
+    "    # 차집합을 활용하여 필터링. \n",
+    "    word_sets = [\n",
+    "        set(input().rstrip()[4:-4]).difference(can_read_set)\n",
+    "        for _ in range(N)\n",
+    "    ]\n",
+    "\n",
+    "    need_to_learn_set = set()\n",
+    "    need_to_learn_set.update(*word_sets)\n",
+    "    candidates = list(need_to_learn_set)\n",
+    "    length_candi = len(candidates)\n",
+    "\n",
+    "    # 배워야 할게 배울수 있는 길이 보다 짧거나 같으면\n",
+    "    if length_candi <= can_learn:\n",
+    "        print(N)\n",
+    "        return\n",
+    "\n",
+    "    max_val = 0\n",
+    "    learned_set = set()\n",
+    "\n",
+    "    def dfs(idx, learn_count):\n",
+    "        nonlocal max_val\n",
+    "\n",
+    "        # 충분히 학습한 후 조사.\n",
+    "        if learn_count == can_learn:\n",
+    "            readable = 0\n",
+    "            for word in word_sets:\n",
+    "                if word.issubset(learned_set):\n",
+    "                    readable += 1\n",
+    "            if readable > max_val:\n",
+    "                max_val = readable\n",
+    "            return\n",
+    "\n",
+    "        # 남은 걸 다 배워도 목표를 채우지 못하는 경우 종료.\n",
+    "        will_learn = length_candi - idx\n",
+    "        if will_learn < (can_learn - learn_count):\n",
+    "            return\n",
+    "\n",
+    "        if idx == length_candi:  # 조사할 것이 없음.\n",
+    "            return\n",
+    "\n",
+    "        # 학습\n",
+    "        learn_char = candidates[idx]\n",
+    "        learned_set.add(learn_char)\n",
+    "        dfs(idx + 1, learn_count + 1)\n",
+    "        learned_set.remove(learn_char)\n",
+    "\n",
+    "        # 학습 x\n",
+    "        dfs(idx + 1, learn_count)\n",
+    "\n",
+    "    dfs(0, 0)\n",
+    "    print(max_val)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -316,6 +557,22 @@
     "```sql\n",
     "-- 5. SQL(Lv.4): 주문량이 많은 아이스크림들 조회하기 \n",
     "-- https://school.programmers.co.kr/learn/courses/30/lessons/133027\n",
+    "SELECT\n",
+    "    F.FLAVOR\n",
+    "FROM\n",
+    "    FIRST_HALF F\n",
+    "JOIN (\n",
+    "    SELECT \n",
+    "        FLAVOR,\n",
+    "        SUM(TOTAL_ORDER) AS JULY_TOTAL\n",
+    "    FROM \n",
+    "        JULY\n",
+    "    GROUP BY \n",
+    "        FLAVOR\n",
+    ") J ON F.FLAVOR = J.FLAVOR\n",
+    "ORDER BY \n",
+    "    (F.TOTAL_ORDER + J.JULY_TOTAL) DESC\n",
+    "LIMIT 3;\n",
     "```"
    ]
   }
