--- a/A03_SOMA_CODINGTEST/B_01_05/C05_D-26_260209.ipynb
+++ b/A03_SOMA_CODINGTEST/B_01_05/C05_D-26_260209.ipynb
@@ -5,23 +5,100 @@
    "execution_count": null,
    "id": "62fc32a4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "G2\n",
+      "H1\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 1. 알고(구현): 백준 1063 (킹) - https://www.acmicpc.net/problem/1063\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''A8 B7 18\n",
+    "RB\n",
+    "RB\n",
+    "RB\n",
+    "RB\n",
+    "RB\n",
+    "RB\n",
+    "RB\n",
+    "RB\n",
+    "RB\n",
+    "RB\n",
+    "RB\n",
+    "RB\n",
+    "RB\n",
+    "RB\n",
+    "RB\n",
+    "RB\n",
+    "RB\n",
+    "RB''')\n",
     "\n",
     "input = sys.stdin.readline\n",
+    "\n",
+    "N = 8\n",
+    "dirs = {\n",
+    "    'R': (0, +1),\n",
+    "    'L': (0, -1),\n",
+    "    'B': (+1, 0),\n",
+    "    'T': (-1, 0)\n",
+    "}\n",
+    "\n",
+    "\n",
+    "def pos_to_rc(str_val):\n",
+    "    row = N - int(str_val[1])\n",
+    "    col = ord(str_val[0]) - ord('A')\n",
+    "    return row, col\n",
+    "\n",
+    "\n",
+    "def rc_to_pos(row, col):\n",
+    "    temp = [chr(col + ord('A')), str(N - row)]\n",
+    "    return \"\".join(temp)\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    K, S, M = input().split()\n",
+    "\n",
+    "    kr, kc = pos_to_rc(K)\n",
+    "    sr, sc = pos_to_rc(S)\n",
+    "\n",
+    "    for _ in range(int(M)):\n",
+    "        moves = input().rstrip()\n",
+    "        nxt_kr, nxt_kc = kr, kc\n",
+    "\n",
+    "        for m in moves:\n",
+    "            nxt_kr += dirs[m][0]\n",
+    "            nxt_kc += dirs[m][1]\n",
+    "\n",
+    "        if 0 <= nxt_kr < N and 0 <= nxt_kc < N:\n",
+    "\n",
+    "            # 이동위치에 스톤이 있을 때\n",
+    "            if (nxt_kr, nxt_kc) == (sr, sc):\n",
+    "                nxt_sr, nxt_sc = sr, sc\n",
+    "\n",
+    "                for m in moves:\n",
+    "                    nxt_sr += dirs[m][0]\n",
+    "                    nxt_sc += dirs[m][1]\n",
+    "\n",
+    "                if 0 <= nxt_sr < N and 0 <= nxt_sc < N:\n",
+    "                    kr, kc = nxt_kr, nxt_kc\n",
+    "                    sr, sc = nxt_sr, nxt_sc\n",
+    "\n",
+    "            else:  # 이동위치에 스톤이 없을 때\n",
+    "                kr, kc = nxt_kr, nxt_kc\n",
+    "\n",
+    "    print(rc_to_pos(kr, kc))  # 왕 출력\n",
+    "    print(rc_to_pos(sr, sc))  # 스톤 출력\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -29,23 +106,56 @@
    "execution_count": null,
    "id": "5f85729d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "63\n",
+      "2\n",
+      "36\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 2. 알고(수학): 백준 2167 (2차원 배열의 합) - https://www.acmicpc.net/problem/2167\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''2 3\n",
+    "1 2 4\n",
+    "8 16 32\n",
+    "3\n",
+    "1 1 2 3\n",
+    "1 2 1 2\n",
+    "1 3 2 3''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    N, M, = map(int, input().split())\n",
+    "\n",
+    "    nums = [tuple(map(int, input().split()))for _ in range(N)]\n",
+    "\n",
+    "    # dp[i][j] (1, 1) 부터 (i, j)까지의 누적합\n",
+    "    dp = [[0] * (M + 1) for _ in range(N + 1)]\n",
+    "\n",
+    "    for i in range(1, N+1):\n",
+    "        for j in range(1, M+1):\n",
+    "            dp[i][j] = dp[i-1][j] + dp[i][j-1] - dp[i-1][j-1] + nums[i-1][j-1]\n",
+    "\n",
+    "    result = []\n",
+    "    K = int(input())\n",
+    "    for _ in range(K):\n",
+    "        i, j, x, y = map(int, input().split())\n",
+    "        result.append(dp[x][y] - dp[i-1][y] - dp[x][j-1] + dp[i-1][j-1])\n",
+    "\n",
+    "    print(\"\\n\".join(map(str, result)))\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -53,23 +163,52 @@
    "execution_count": null,
    "id": "be7d35ea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 3. 알고(Map): 백준 9375 (패션왕 신해빈) - https://www.acmicpc.net/problem/9375\n",
     "import sys\n",
+    "from collections import defaultdict\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''2\n",
+    "3\n",
+    "hat headgear\n",
+    "sunglasses eyewear\n",
+    "turban headgear\n",
+    "3\n",
+    "mask face\n",
+    "sunglasses face\n",
+    "makeup face''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    n = int(input())\n",
     "\n",
-    "    pass\n",
+    "    count = defaultdict(int)\n",
+    "    for _ in range(n):\n",
+    "        type = input().split()[1] # 타입만 받음\n",
+    "        count[type] += 1\n",
     "\n",
+    "    multi = 1 # 각 타입별 안입는 경우까지 포함해서 곱하기\n",
+    "    for type_count in count.values(): \n",
+    "        multi *= (type_count + 1)\n",
     "\n",
-    "solve()\n"
+    "    print(multi - 1) # 안입는 경우 제외\n",
+    "\n",
+    "T = int(input())\n",
+    "for _ in range(T):\n",
+    "    solve()\n"
    ]
   },
   {
@@ -77,23 +216,45 @@
    "execution_count": null,
    "id": "9ab6f72b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 4. 알고(그리디): 백준 15903 (카드 합체 놀이) - https://www.acmicpc.net/problem/15903\n",
     "import sys\n",
+    "from heapq import heappop, heappush, heapify\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''4 2\n",
+    "4 2 3 1''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    n, m = map(int, input().split())\n",
+    "    nums_pq = list(map(int, input().split()))\n",
+    "    heapify(nums_pq)\n",
+    "\n",
+    "    for _ in range(m):\n",
+    "        a = heappop(nums_pq)\n",
+    "        b = heappop(nums_pq)\n",
+    "\n",
+    "        sum_card = a + b\n",
+    "        heappush(nums_pq, sum_card)\n",
+    "        heappush(nums_pq, sum_card)\n",
+    "\n",
+    "    print(sum(nums_pq))\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -102,7 +263,19 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "\n",
+    "-- 5. SQL(Lv.2): 고양이와 개는 몇 마리 있을까 \n",
+    "-- https://school.programmers.co.kr/learn/courses/30/lessons/59040\n",
+    "SELECT\n",
+    "    ANIMAL_TYPE,\n",
+    "    COUNT(*) AS count\n",
+    "FROM\n",
+    "    ANIMAL_INS\n",
+    "WHERE\n",
+    "    ANIMAL_TYPE IN ('Cat', 'Dog')\n",
+    "GROUP BY\n",
+    "    ANIMAL_TYPE\n",
+    "ORDER BY\n",
+    "    ANIMAL_TYPE ASC;\n",
     "```"
    ]
   },
@@ -111,23 +284,87 @@
    "execution_count": null,
    "id": "d4d305b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 1. 알고(시뮬): 백준 3190 (뱀) - https://www.acmicpc.net/problem/3190\n",
     "import sys\n",
+    "from collections import deque\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''10\n",
+    "4\n",
+    "1 2\n",
+    "1 3\n",
+    "1 4\n",
+    "1 5\n",
+    "4\n",
+    "8 D\n",
+    "10 D\n",
+    "11 D\n",
+    "13 L''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    N = int(input())  # 테두리에 -1 돌리기.\n",
+    "    board = [[-1] * (N + 2) for _ in range(N + 2)]\n",
+    "    for r in range(1, N + 1):\n",
+    "        for c in range(1, N + 1):\n",
+    "            board[r][c] = 0\n",
+    "\n",
+    "    K = int(input())  # 사과 (+1)\n",
+    "    for _ in range(K):\n",
+    "        r, c = map(int, input().split())\n",
+    "        board[r][c] = +1\n",
+    "\n",
+    "    L = int(input())  # 방향전환 정보\n",
+    "    dirs = [(0, +1), (+1, 0), (0, -1), (-1, 0)]  # 오른쪽 부터 시계방향\n",
+    "    switchs = dict()\n",
+    "    for _ in range(L):\n",
+    "        time, direction = input().split()\n",
+    "        switchs[int(time)] = 1 if direction == 'D' else -1\n",
+    "\n",
+    "    snake = deque([(1, 1)])       # 뱀의 몸 좌표\n",
+    "    board[1][1] = -1  # 초기 뱀의 몸\n",
+    "\n",
+    "    time = 0        # 시간\n",
+    "    dir_idx = 0     # 진행방향\n",
+    "    while True:\n",
+    "        time += 1\n",
+    "        hr, hc = snake[-1]  # 현재 머리 위치\n",
+    "        dr, dc = dirs[dir_idx]\n",
+    "\n",
+    "        nr, nc = hr + dr, hc + dc  # 다음 머리\n",
+    "        nxt_val = board[nr][nc]\n",
+    "        if nxt_val == -1:  # 벽 또는 몸이 나오면 종료\n",
+    "            break\n",
+    "\n",
+    "        # 머리 늘리기\n",
+    "        snake.append((nr, nc))\n",
+    "        board[nr][nc] = -1\n",
+    "\n",
+    "        if nxt_val != 1:  # 사과가 없을때만 꼬리 줄이기\n",
+    "            tr, tc = snake.popleft()\n",
+    "            board[tr][tc] = 0\n",
+    "\n",
+    "        # 다음 방향 설정\n",
+    "        nxt_dir = switchs.get(time, 0)\n",
+    "        dir_idx = (dir_idx + nxt_dir) % 4\n",
+    "\n",
+    "    print(time)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -137,7 +374,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 2. 알고(DP): 백준 2096 (내려가기) - https://www.acmicpc.net/problem/2096\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -161,7 +398,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 3. 알고(트리): 백준 1991 (트리 순회) - https://www.acmicpc.net/problem/1991\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -185,7 +422,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 4. 알고(최적화): 백준 18428 (감시 피하기) - https://www.acmicpc.net/problem/18428\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -208,14 +445,29 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "\n",
+    "-- 5. SQL(Lv.4): 저자 별 카테고리 별 매출액 집계하기 \n",
+    "-- https://school.programmers.co.kr/learn/courses/30/lessons/144856\n",
     "```"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "251117_MathForPython",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
