--- a/A03_SOMA_CODINGTEST/B_01_05/C05_D-26_260209.ipynb
+++ b/A03_SOMA_CODINGTEST/B_01_05/C05_D-26_260209.ipynb
@@ -197,18 +197,19 @@
     "\n",
     "    count = defaultdict(int)\n",
     "    for _ in range(n):\n",
-    "        type = input().split()[1] # 타입만 받음\n",
+    "        type = input().split()[1]  # 타입만 받음\n",
     "        count[type] += 1\n",
     "\n",
-    "    multi = 1 # 각 타입별 안입는 경우까지 포함해서 곱하기\n",
-    "    for type_count in count.values(): \n",
+    "    multi = 1  # 각 타입별 안입는 경우까지 포함해서 곱하기\n",
+    "    for type_count in count.values():\n",
     "        multi *= (type_count + 1)\n",
     "\n",
-    "    print(multi - 1) # 안입는 경우 제외\n",
+    "    print(multi - 1)  # 안입는 경우 제외\n",
+    "\n",
     "\n",
     "T = int(input())\n",
     "for _ in range(T):\n",
-    "    solve()\n"
+    "    solve()"
    ]
   },
   {
@@ -372,71 +373,207 @@
    "execution_count": null,
    "id": "44b2c219",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18 6\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. 알고(DP): 백준 2096 (내려가기) - https://www.acmicpc.net/problem/2096\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''3\n",
+    "1 2 3\n",
+    "4 5 6\n",
+    "4 9 0''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N = int(input())\n",
     "\n",
-    "    pass\n",
+    "    max_dp = [0, 0, 0]\n",
+    "    min_dp = [0, 0, 0]\n",
+    "\n",
+    "    for _ in range(N):\n",
+    "        a, b, c = map(int, input().split())\n",
+    "\n",
+    "        max_dp = [\n",
+    "            a + max(max_dp[0], max_dp[1]),\n",
+    "            b + max(max_dp[0], max_dp[1], max_dp[2]),\n",
+    "            c + max(max_dp[1], max_dp[2])\n",
+    "        ]\n",
+    "\n",
+    "        min_dp = [\n",
+    "            a + min(min_dp[0], min_dp[1]),\n",
+    "            b + min(min_dp[0], min_dp[1], min_dp[2]),\n",
+    "            c + min(min_dp[1], min_dp[2])\n",
+    "        ]\n",
+    "\n",
+    "    print(max(max_dp), min(min_dp))\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 148,
    "id": "7310d5de",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ABDCEFG\n",
+      "DBAECFG\n",
+      "DBEGFCA\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. 알고(트리): 백준 1991 (트리 순회) - https://www.acmicpc.net/problem/1991\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''7\n",
+    "A B C\n",
+    "B D .\n",
+    "C E F\n",
+    "E . .\n",
+    "F . G\n",
+    "D . .\n",
+    "G . .''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N = int(input())\n",
+    "    tree = dict()\n",
     "\n",
-    "    pass\n",
+    "    for _ in range(N):\n",
+    "        root, left, right = input().split()\n",
+    "        tree[root] = [left, right]\n",
+    "\n",
+    "    def search_node(root, type):\n",
+    "        if root == '.':\n",
+    "            return \"\"\n",
+    "\n",
+    "        left, right = tree[root]\n",
+    "        l_node = search_node(left, type)\n",
+    "        r_node = search_node(right, type)\n",
+    "\n",
+    "        orders = [\n",
+    "            root + l_node + r_node,  # 0: 전위\n",
+    "            l_node + root + r_node,  # 1: 중위\n",
+    "            l_node + r_node + root  # 2: 후위\n",
+    "        ]\n",
+    "\n",
+    "        return orders[type]\n",
+    "\n",
+    "    for type in range(3):\n",
+    "        print(search_node('A', type))\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 206,
    "id": "f78dd7c6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "YES\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. 알고(최적화): 백준 18428 (감시 피하기) - https://www.acmicpc.net/problem/18428\n",
     "import sys\n",
+    "from itertools import combinations\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''5\n",
+    "X S X X T\n",
+    "T X S X X\n",
+    "X X X X X\n",
+    "X T X X X\n",
+    "X X T X X''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    N = int(input())\n",
+    "    board = [input().split() for _ in range(N)]\n",
+    "    dirs = [(0, +1), (0, -1), (+1, 0), (-1, 0)]\n",
+    "\n",
+    "    teachers, emptys, students = [], [], []\n",
+    "    teacher_r, teacher_c = set(), set()\n",
+    "    students_r, students_c = set(), set()\n",
+    "\n",
+    "    for r in range(N):\n",
+    "        for c in range(N):\n",
+    "            if board[r][c] == 'T':\n",
+    "                teachers.append((r, c))\n",
+    "                teacher_r.add(r)\n",
+    "                teacher_c.add(c)\n",
+    "            elif board[r][c] == 'S':\n",
+    "                students.append((r, c))\n",
+    "                students_r.add(r)\n",
+    "                students_c.add(c)\n",
+    "            else:\n",
+    "                emptys.append((r, c))\n",
+    "\n",
+    "    emptys = [  # 선생님과 학생 r, c 와 관련 없으면 조사 제외\n",
+    "        (er, ec) for er, ec in emptys\n",
+    "        if (er in teacher_r and er in students_r)\n",
+    "        or (ec in teacher_c and ec in students_c)\n",
+    "    ]\n",
+    "\n",
+    "    # 학생 발견되면 실패 (True), 발견 못하면 (False)\n",
+    "    def can_see_student(three_obs):\n",
+    "        for tr, tc in teachers:\n",
+    "            for dr, dc in dirs:\n",
+    "                nr, nc = tr + dr, tc + dc\n",
+    "                while 0 <= nr < N and 0 <= nc < N:\n",
+    "                    if (nr, nc) in three_obs:\n",
+    "                        break\n",
+    "                    if board[nr][nc] == 'S':\n",
+    "                        return True\n",
+    "                    if board[nr][nc] == 'T':\n",
+    "                        break\n",
+    "                    nr, nc = nr + dr, nc + dc\n",
+    "        return False\n",
+    "\n",
+    "    if len(emptys) >= 3:\n",
+    "        for three_obs in combinations(emptys, 3):\n",
+    "            if not can_see_student(set(three_obs)):  # 학생 발견 못하면 바로 종료\n",
+    "                print(\"YES\")\n",
+    "                return\n",
+    "    else:\n",
+    "        if not can_see_student(set(emptys)):  # 필터링 이후 조사대상이 3개보다 적으면,\n",
+    "            print(\"YES\")\n",
+    "            return\n",
+    "\n",
+    "    print(\"NO\")\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -447,6 +584,23 @@
     "```sql\n",
     "-- 5. SQL(Lv.4): 저자 별 카테고리 별 매출액 집계하기 \n",
     "-- https://school.programmers.co.kr/learn/courses/30/lessons/144856\n",
+    "SELECT \n",
+    "    A.AUTHOR_ID,\n",
+    "    A.AUTHOR_NAME,\n",
+    "    B.CATEGORY,\n",
+    "    SUM(SALES * PRICE) AS TOTAL_SALES\n",
+    "FROM \n",
+    "    BOOK B\n",
+    "JOIN \n",
+    "    AUTHOR A ON B.AUTHOR_ID = A.AUTHOR_ID\n",
+    "JOIN \n",
+    "    BOOK_SALES S ON B.BOOK_ID = S.BOOK_ID\n",
+    "WHERE\n",
+    "    S.SALES_DATE LIKE '2022-01%'\n",
+    "GROUP BY\n",
+    "    A.AUTHOR_ID, A.AUTHOR_NAME, B.CATEGORY\n",
+    "ORDER BY \n",
+    "    A.AUTHOR_ID ASC, B.CATEGORY DESC;\n",
     "```"
    ]
   }
