--- a/A03_SOMA_CODINGTEST/B_06_10/C06_D-25_260210.ipynb
+++ b/A03_SOMA_CODINGTEST/B_06_10/C06_D-25_260210.ipynb
@@ -7,11 +7,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 1. 알고(구현): 백준 2567 (색종이 - 2) - https://www.acmicpc.net/problem/2567\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''4\n",
+    "3 7\n",
+    "5 2\n",
+    "15 7\n",
+    "13 14''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
@@ -31,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 2. 알고(수학): 백준 1004 (어린 왕자) - https://www.acmicpc.net/problem/1004\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -55,7 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 3. 알고(Map): 백준 7785 (회사에 있는 사람) - https://www.acmicpc.net/problem/7785\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -79,7 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 4. 알고(그리디): 백준 1449 (수리공 항승) - https://www.acmicpc.net/problem/1449\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -102,7 +106,7 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "\n",
+    "-- 5. SQL(Lv.2): 중성화 여부 파악하기 - https://school.programmers.co.kr/learn/courses/30/lessons/59409\n",
     "```"
    ]
   },
@@ -113,7 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 1. 알고(시뮬): 백준 14502 (연구소) - https://www.acmicpc.net/problem/14502\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -137,7 +141,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 2. 알고(DP): 백준 2293 (동전 1) - https://www.acmicpc.net/problem/2293\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -161,7 +165,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 3. 알고(그래프): 백준 14938 (서강그라운드) - https://www.acmicpc.net/problem/14938\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -185,7 +189,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 4. 알고(백트래킹): 백준 15684 (사다리 조작) - https://www.acmicpc.net/problem/15684\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -208,6 +212,7 @@
    "metadata": {},
    "source": [
     "```sql\n",
+    "-- 5. SQL(Lv.3): 즐겨찾기가 가장 많은 식당 정보 출력하기 - https://school.programmers.co.kr/learn/courses/30/lessons/131123\n",
     "\n",
     "```"
    ]
